--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,26 @@
+body {
+    background-color: grey;
+}
+
 h1,
 h2 {
     font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    padding: 10px;
+    color: #fff;
+}
+
+h1 {
+    font-size: 2.4em;
+}
+
+h2 {
+    font-size: 2em;
+}
+
+p {
+    font-size: 1.2em;
+    line-height: 1.5;
+    color: #fff;
+    margin-top: 20px;
 }
